# parcheesi

./: .gitignore  CMakeLists.txt  Makefile  Parcheesi.c  README.md  main.c  tabuleiro.c
src/: CMakeLists.txt  board.c  board.h  game.c  game.h  gameConstructor.c  gameConstructor.h
src/comm/: CMakeLists.txt  socket.h
src/game/: CMakeLists.txt  board.c  board.h  gameLogic.c  gameLogic.h  gameState.c  gameState.h  gameStructure.h  player.h
utils/: CMakeLists.txt  String_utils.c  String_utils.h
